Attempt to fix git fatal

--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -21,6 +21,7 @@ jobs:
     steps:
       - name: Checkout repository
         run: |
+          chown root:root .
           git init
           git remote add origin "https://oauth:${{ github.token }}@github.com/${{ github.repository }}.git"
           git fetch origin --depth=1 ${{ github.ref }}
