--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -34,8 +34,11 @@ jobs:
         run: terraform show -json tfplan
       - name: Prepare AWS
         run: |
-          mkdir ~/.aws && touch ~/.aws/credentials
-          aws configure set default.s3.signature_version s3v4
+          mkdir ~/.aws
+          echo "[default]" >> ~/.aws/config
+          echo "region = us-east-1" >> ~/.aws/config
+          echo "s3 =" >> ~/.aws/config
+          echo "    signature_version = s3v4" >> ~/.aws/config
           echo "[default]" >> ~/.aws/credentials
           echo "aws_access_key_id=${{ secrets.ACCESS_KEY_ID }}" >> ~/.aws/credentials
           echo "aws_secret_access_key=${{ secrets.SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
