--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -70,6 +70,7 @@ jobs:
 
   apply:
     needs: plan
+    if: needs.plan.outputs.exit_code == 2
     environment: production
     runs-on: ubuntu-22.04
     container:
@@ -77,8 +78,6 @@ jobs:
       options: --pid host --ipc host
     defaults:
       run: { shell: sh }
-    outputs:
-      exit_code: ${{ steps.plan.outputs.exit_code }}
     steps:
       - name: Prepare AWS
         run: |
