--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -65,8 +65,9 @@ jobs:
       - name: Upload tfplan to S3
         if: steps.plan.outputs.exit_code == 2
         run: |
+          tar -czf tfplan.tar.gz ./ -x .git 
           alias aws='aws --endpoint-url ${{ secrets.ENDPOINT_URL }}'
-          aws s3 cp tfplan s3://${{ secrets.BUCKET }}/${{ github.repository }}/${{ github.sha }}.tfplan
+          aws s3 cp tfplan.tar.gz s3://${{ secrets.BUCKET }}/${{ github.repository }}/${{ github.sha }}.tar.gz
 
   apply:
     needs: plan
@@ -89,17 +90,11 @@ jobs:
           echo "[default]" >> ~/.aws/credentials
           echo "aws_access_key_id=${{ secrets.ACCESS_KEY_ID }}" >> ~/.aws/credentials
           echo "aws_secret_access_key=${{ secrets.SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
-      - name: Checkout repository
-        run: |
-          chown root:root .
-          git init
-          git remote add origin "https://oauth:${{ github.token }}@github.com/${{ github.repository }}.git"
-          git fetch origin --depth=1 ${{ github.ref }}
-          git reset --hard FETCH_HEAD
       - name: Pull tfplan from S3
         run: |
           alias aws='aws --endpoint-url ${{ secrets.ENDPOINT_URL }}'
-          aws s3 cp s3://${{ secrets.BUCKET }}/${{ github.repository }}/${{ github.sha }}.tfplan tfplan
+          aws s3 cp s3://${{ secrets.BUCKET }}/${{ github.repository }}/${{ github.sha }}.tar.gz tfplan.tar.gz
+          tar xf tfplan.tar.gz
       - name: Terraform Init
         run: terraform init
       - name: Terraform Show
@@ -108,4 +103,5 @@ jobs:
         run: terraform apply -auto-approve tfplan
 
 
+# @todo use provider cache
 # @todo step summary (no color? port color to latex color?)
