--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -21,7 +21,8 @@ jobs:
     outputs:
       exit_code: ${{ steps.plan.outputs.exit_code }}
     steps:
-      - name: Prepare AWS
+      - *step_prepare_aws
+        name: Prepare AWS
         run: |
           mkdir ~/.aws
           echo "[default]" >> ~/.aws/config
@@ -31,14 +32,18 @@ jobs:
           echo "[default]" >> ~/.aws/credentials
           echo "aws_access_key_id=${{ secrets.ACCESS_KEY_ID }}" >> ~/.aws/credentials
           echo "aws_secret_access_key=${{ secrets.SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
-      - name: Checkout repository
+
+      - *step_checkout_repository
+        name: Checkout repository
         run: |
           chown root:root .
           git init
           git remote add origin "https://oauth:${{ github.token }}@github.com/${{ github.repository }}.git"
           git fetch origin --depth=1 ${{ github.ref }}
           git reset --hard FETCH_HEAD
-      - name: Terraform Init
+
+      - *step_terraform_init
+        name: Terraform Init
         run: terraform init
 
       # - name: Dummy Import to test no changes
@@ -65,7 +70,7 @@ jobs:
       - name: Upload tfplan to S3
         if: steps.plan.outputs.exit_code == 2
         run: |
-          tar -czf tfplan.tar.gz ./ -x .git 
+          tar -czf tfplan.tar.gz --exclude .git --exclude .github ./
           alias aws='aws --endpoint-url ${{ secrets.ENDPOINT_URL }}'
           aws s3 cp tfplan.tar.gz s3://${{ secrets.BUCKET }}/${{ github.repository }}/${{ github.sha }}.tar.gz
 
@@ -80,23 +85,14 @@ jobs:
     defaults:
       run: { shell: sh }
     steps:
-      - name: Prepare AWS
-        run: |
-          mkdir ~/.aws
-          echo "[default]" >> ~/.aws/config
-          echo "region = us-east-1" >> ~/.aws/config
-          echo "s3 =" >> ~/.aws/config
-          echo "    signature_version = s3v4" >> ~/.aws/config
-          echo "[default]" >> ~/.aws/credentials
-          echo "aws_access_key_id=${{ secrets.ACCESS_KEY_ID }}" >> ~/.aws/credentials
-          echo "aws_secret_access_key=${{ secrets.SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
+      - &step_prepare_aws
+      - &step_checkout_repository
       - name: Pull tfplan from S3
         run: |
           alias aws='aws --endpoint-url ${{ secrets.ENDPOINT_URL }}'
           aws s3 cp s3://${{ secrets.BUCKET }}/${{ github.repository }}/${{ github.sha }}.tar.gz tfplan.tar.gz
           tar xf tfplan.tar.gz
-      - name: Terraform Init
-        run: terraform init
+      - &step_terraform_init
       - name: Terraform Show
         run: terraform show tfplan
       - name: Terraform Apply
