--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -65,7 +65,7 @@ jobs:
           fi
 
       - name: Prepare job summary
-        run: terraform show -no-color tfplan >> "$GITHUB_SUMMARY"
+        run: terraform show -no-color tfplan >> "$GITHUB_STEP_SUMMARY"
 
       - name: Upload tfplan to S3
         if: steps.plan.outputs.exit_code == 2
