--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -65,7 +65,11 @@ jobs:
           fi
 
       - name: Prepare job summary
-        run: terraform show -no-color tfplan >> "$GITHUB_STEP_SUMMARY"
+        run: |
+          echo "# Terraform Plan" >> "$GITHUB_STEP_SUMMARY"
+          echo "```" >> "$GITHUB_STEP_SUMMARY"
+          terraform show -no-color tfplan >> "$GITHUB_STEP_SUMMARY"
+          echo "```" >> "$GITHUB_STEP_SUMMARY"
 
       - name: Upload tfplan to S3
         if: steps.plan.outputs.exit_code == 2
