--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -66,10 +66,12 @@ jobs:
 
       - name: Prepare job summary
         run: |
-          echo "# Terraform Plan" >> "$GITHUB_STEP_SUMMARY"
-          echo "```" >> "$GITHUB_STEP_SUMMARY"
-          terraform show -no-color tfplan >> "$GITHUB_STEP_SUMMARY"
-          echo "```" >> "$GITHUB_STEP_SUMMARY"
+          (
+            echo "# Terraform Plan";
+            echo "```";
+            terraform show -no-color tfplan 
+            echo "```"
+          ) >> "$GITHUB_STEP_SUMMARY"
 
       - name: Upload tfplan to S3
         if: steps.plan.outputs.exit_code == 2
