--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -68,9 +68,9 @@ jobs:
         run: |
           (
             echo "# Terraform Plan";
-            echo "```";
-            terraform show -no-color tfplan 
-            echo "```"
+            echo '```';
+            terraform show -no-color tfplan;
+            echo '```';
           ) >> "$GITHUB_STEP_SUMMARY"
 
       - name: Upload tfplan to S3
