--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,7 @@ jobs:
     uses: ./.github/workflows/template.yml
     with:
       environment: ${{ matrix.environment }}
+      access_key_id: ${{ secrets.ACCESS_KEY_ID }}
+      secret_access_key: ${{ secrets.SECRET_ACCESS_KEY }}
+      endpoint_url: ${{ secrets.ENDPOINT_URL }}
+      bucket: ${{ secrets.BUCKET }}
