--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -3,6 +3,14 @@ on:
     inputs:
       environment:
         type: string
+      access_key_id:
+        type: string
+      secret_access_key:
+        type: string
+      endpoint_url:
+        type: string
+      bucket:
+        type: string
 
 jobs:
   plan:
@@ -26,8 +34,8 @@ jobs:
           echo "s3 =" >> ~/.aws/config
           echo "    signature_version = s3v4" >> ~/.aws/config
           echo "[default]" >> ~/.aws/credentials
-          echo "aws_access_key_id=${{ secrets.ACCESS_KEY_ID }}" >> ~/.aws/credentials
-          echo "aws_secret_access_key=${{ secrets.SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
+          echo "aws_access_key_id=${{ inputs.access_key_id }}" >> ~/.aws/credentials
+          echo "aws_secret_access_key=${{ inputs.secret_access_key }}" >> ~/.aws/credentials
 
       - name: Checkout repository
         run: |
@@ -74,8 +82,8 @@ jobs:
         if: steps.plan.outputs.exit_code == 2
         run: |
           tar -czf tfplan.tar.gz --exclude .git --exclude .github ./
-          alias aws='aws --endpoint-url ${{ secrets.ENDPOINT_URL }}'
-          aws s3 cp tfplan.tar.gz s3://${{ secrets.BUCKET }}/${{ github.repository }}/${{ github.sha }}-${{ inputs.environment }}.tar.gz
+          alias aws='aws --endpoint-url ${{ inputs.endpoint_url }}'
+          aws s3 cp tfplan.tar.gz s3://${{ inputs.bucket }}/${{ github.repository }}/${{ github.sha }}-${{ inputs.environment }}.tar.gz
 
   apply:
     needs: plan
@@ -98,8 +106,8 @@ jobs:
           echo "s3 =" >> ~/.aws/config
           echo "    signature_version = s3v4" >> ~/.aws/config
           echo "[default]" >> ~/.aws/credentials
-          echo "aws_access_key_id=${{ secrets.ACCESS_KEY_ID }}" >> ~/.aws/credentials
-          echo "aws_secret_access_key=${{ secrets.SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
+          echo "aws_access_key_id=${{ inputs.access_key_id }}" >> ~/.aws/credentials
+          echo "aws_secret_access_key=${{ inputs.secret_access_key }}" >> ~/.aws/credentials
 
       - name: Checkout repository
         run: |
@@ -111,8 +119,8 @@ jobs:
 
       - name: Pull tfplan from S3
         run: |
-          alias aws='aws --endpoint-url ${{ secrets.ENDPOINT_URL }}'
-          aws s3 cp s3://${{ secrets.BUCKET }}/${{ github.repository }}/${{ github.sha }}-${{ inputs.environment }}.tar.gz tfplan.tar.gz
+          alias aws='aws --endpoint-url ${{ inputs.endpoint_url }}'
+          aws s3 cp s3://${{ inputs.bucket }}/${{ github.repository }}/${{ github.sha }}-${{ inputs.environment }}.tar.gz tfplan.tar.gz
           tar xf tfplan.tar.gz
 
       - name: Terraform Show
