--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -46,6 +46,20 @@ jobs:
           git fetch origin --depth=1 ${{ github.ref }}
           git reset --hard FETCH_HEAD
 
+      - name: Prepare Terraform to use cache
+        run: |
+          echo 'plugin_cache_dir="$HOME/.terraform.d/plugin-cache"' > ~/.terraformrc
+          mkdir -p ~/.terraform.d/plugin-cache
+
+      - name: Setup Terraform Cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.terraform.d/plugin-cache
+          key: ${{ runner.os }}-terraform-${{ hashFiles('**/.terraform.lock.hcl') }}
+          restore-keys: |
+            ${{ runner.os }}-terraform-
+
       - name: Terraform Init
         run: terraform init
 
@@ -118,6 +132,20 @@ jobs:
           git fetch origin --depth=1 ${{ github.ref }}
           git reset --hard FETCH_HEAD
 
+      - name: Prepare Terraform to use cache
+        run: |
+          echo 'plugin_cache_dir="$HOME/.terraform.d/plugin-cache"' > ~/.terraformrc
+          mkdir -p ~/.terraform.d/plugin-cache
+
+      - name: Setup Terraform Cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.terraform.d/plugin-cache
+          key: ${{ runner.os }}-terraform-${{ hashFiles('**/.terraform.lock.hcl') }}
+          restore-keys: |
+            ${{ runner.os }}-terraform-
+
       - name: Pull tfplan from S3
         run: |
           alias aws='aws --endpoint-url ${{ secrets.ENDPOINT_URL }}'
@@ -131,3 +159,5 @@ jobs:
         run: terraform apply -auto-approve tfplan
 # @todo use provider cache
 # @todo step summary (no color? port color to latex color?)
+# @todo cancel old jobs on new push
+# @todo step summary for apply
