--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -96,6 +96,7 @@ jobs:
       - name: Upload tfplan to S3
         if: steps.plan.outputs.exit_code == 2
         run: |
+          touch tfplan.tar.gz
           tar -czf tfplan.tar.gz --exclude tfplan.tar.gz --exclude .git --exclude .github ./
           alias aws='aws --endpoint-url ${{ secrets.ENDPOINT_URL }}'
           aws s3 cp tfplan.tar.gz s3://${{ secrets.BUCKET }}/${{ github.repository }}/${{ github.sha }}-${{ inputs.environment }}.tar.gz
