Allow other environments to continue if one fails

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ jobs:
   deploy:
     permissions: { id-token: write, contents: read }
     strategy:
+      # allow other environments to continue if one fails
+      fail-fast: false
       matrix:
         environment:
           - staging
