--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -87,7 +87,7 @@ jobs:
       - name: Prepare job summary
         run: |
           (
-            echo "# Terraform Plan (${{ inputs.environment }}))";
+            echo "# Terraform Plan (${{ inputs.environment }})";
             echo '```';
             terraform show -no-color tfplan;
             echo '```';
@@ -133,11 +133,28 @@ jobs:
           git fetch origin --depth=1 ${{ github.ref }}
           git reset --hard FETCH_HEAD
 
+      - name: Prepare Terraform to use cache
+        run: |
+          echo 'plugin_cache_dir="$HOME/.terraform.d/plugin-cache"' > ~/.terraformrc
+          mkdir -p ~/.terraform.d/plugin-cache
+
+      - name: Setup Terraform Cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.terraform.d/plugin-cache
+          key: ${{ runner.os }}-terraform-${{ hashFiles('**/.terraform.lock.hcl') }}
+          restore-keys: |
+            ${{ runner.os }}-terraform-
+
       - name: Pull tfplan from S3
         run: |
           alias aws='aws --endpoint-url ${{ secrets.ENDPOINT_URL }}'
           aws s3 cp s3://${{ secrets.BUCKET }}/${{ github.repository }}/${{ github.sha }}-${{ inputs.environment }}.tar.gz tfplan.tar.gz
           tar xf tfplan.tar.gz
+
+      - name: Terraform Init
+        run: terraform init
 
       - name: Terraform Show
         run: terraform show tfplan
