--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -105,6 +105,7 @@ jobs:
     needs: plan
     if: needs.plan.outputs.exit_code == 2
     environment: ${{ inputs.environment }}
+    concurrency: ${{ inputs.environment }}
     runs-on: ubuntu-22.04
     container:
       image: ockawin/v1-app-infra-ci:edge-amd64
